# cargo-solana-test

./: .gitignore  Cargo.toml  README.md
src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  project_toml.rs  utility.rs
src/commands/: init.rs  start.rs
tests/: Cargo.toml  acceptance.rs  anchor_template.rs  genereted_test.rs  solana_template.rs
tests/sample_project/: Cargo.toml
