[package]
name = "solana_test_setup"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
toml_edit = "0.14.2"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
zip = "0.6.2"
tempfile = "3.3.0"

[dependencies.abscissa_core]
version = "0.6.0"
[dependencies.abscissa_tokio]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"