[package]
name = "solana-test"
authors = ["f44z"]
description = "Solana testing utils"
license = "Apache-2.0 OR MIT"
version = "0.1.0"
repository = "https://github.com/f44z/solana-test"
readme = "README.md"
edition = "2021"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
toml_edit = "0.14.2"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
zip = "0.6.2"
tempfile = "3.3.0"
dirs = "4.0.0"
semver = "1.0.9"

[dependencies.abscissa_core]
version = "0.6.0"
[dependencies.abscissa_tokio]
version = "0.6.0"

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"
