[package]
name = "solana_poc_async_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.14.2"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
zip = "0.6.2"
tempfile = "3.3.0"
anchor-lang = "0.22.1"

[features]
test-bpf = []

[dev-dependencies.solana-poc-async]
version = "0.1.0"
path = "/Users/przem/code/hal_tools/solana_test_initializer/solana-poc-async-0.1.0"
